Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63846

Regression in 5.9.2: Internal dragging in QTableView inside QDialog freezes the dialog

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9.3
    • 5.9.2
    • Widgets: Itemviews
    • I'm on Arch Linux, using x11.  Qt version 5.9.2 exhibits this behavior, whereas 5.9.1 works like a charm.
    • acdb3340321d1b8823b54f2ea492f975c6f942d8

      I've encountered a bug which is present in 5.9.2 but not 5.9.1.  Specifically, this is related to setting up a QTableView which has a setDragDropMode of InternalMove.  If I add such a widget to a QMainWindow directly, it works fine – if you click and drag inside the QTableView, borders get updated properly and all is well.

      If I add the widget inside a QDialog, however, pretty much the instant my mouse starts to move initially, the entire dialog totally freezes up, my mouse pointer remains the mid-dragging status, and the only way to return control to the dialog (that I've found, anyway) is to hit Escape (which also cancels the drag).

      I've got a full app which is exhibiting this behavior, but I'm also attaching a simple pyqt example which should be pretty well stripped down to the essentials (apologies it's not C++!)

        1. tableview-new.py
          2 kB
          CJ Kucera
        2. tableview-new-show.py
          2 kB
          CJ Kucera
        For Gerrit Dashboard: QTBUG-63846
        # Subject Branch Project Status CR V

            andysh Andy Shaw
            apocalyptech CJ Kucera
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes